Checking in workaround for blocker bug 108526. Don't force a reset of an input if there's no parent since this causes checkboxes and radio buttons to be reset before all their attributes are added. r=sicking@bigfoot.com, sr=blizzard@mozilla.org